added functionality need to work on design and getting the pictures to show up

--- a/weather_app/src/App.css
+++ b/weather_app/src/App.css
@@ -40,3 +40,24 @@
 .read-the-docs {
   color: #888;
 }
+
+.daily-container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.customButton{
+  height: 55px;
+}
+
+.currentWeather{
+  width: 450px;
+}
+
+.hourlyWeather{
+  width: 300px;
+}
+
+.weekCards{
+  width:150px;
+}
